# stock-market-analysis-python

./: .gitignore  AI_USAGE_LOG.md  CHARTER.md  FINAL_PROJECT.md  GITHUB_PRIMER.md  PYTHON_PROJECT_PRIMER.md  README.md  SUBMISSION_FLOW.md  baseline_metric.json  main.md  main.py  milestone_manifest.json  primary_metric.json  pyproject.toml  report (2) (1).md  report.md
artifacts/probes/: README.md  replace_me_probe.md
data/: README.md  indian_equity_portfolio_dataset (1) (1).xlsx  indian_equity_portfolio_dataset.xlsx  probe_output.txt
grading_feedback/: milestone_feedback.md
notebooks/: Indian_Equity_Predictor_ECO6810_CLEAN (1).ipynb  Indian_Equity_Predictor_ECO6810_FINAL_updated.ipynb  README.md
outputs/: README.md  baseline_metric.json  full_predictions.csv  milestone_manifest.json  model_comparison.json  primary_metric.json  probe.md  probe_output.txt
outputs/source_probes/: yfinance_probe.md
peer-samples/: 01_inflation_drivers.md  02_pmuy_causal.md  03_literacy_imr_descriptive.md  README.md
project_code/: __init__.py  io.py  template_outputs.py
starter-ideas/: 01_food_price_spike_watch.md  02_heat_and_power_demand.md  03_womens_digital_access_gap.md  04_sanitation_and_child_nutrition.md  05_swachh_bharat_toilet_access.md  README.md
