[project]
name = "eco6810-project-template"
version = "0.1.0"
description = "Starter scaffold for the ECO6810 final project"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "requests>=2.31",
    "yfinance>=0.2.36",
    "scikit-learn>=1.4",
    "matplotlib>=3.8",
    "tensorflow>=2.15",
    "xgboost>=2.0",
    "shap>=0.44",
    "openpyxl>=3.1"
]
[tool.uv]
dev-dependencies = []
